# MSV-med

./: README.md  pyproject.toml
app/infrastructure/: pdf_generator.py
app/presentation/views/: main_view.py
app/presentation/widgets/: local_file_widgets.py  metadata_widget.py  pacs_management_widget.py  study_list_widget.py
app/services/: hybrid_pacs_service.py  pdf_service.py
src/: build_app.py  setup_database.py
src/app/: main.py
src/app/config/: database.py  settings.py
src/app/core/entities/: study.py  user.py
src/app/core/exceptions/: auth_exceptions.py  pacs_exceptions.py  pdf_exceptions.py
src/app/core/interfaces/: auth_interface.py  local_file_interface.py  pacs_interface.py  pdf_interface.py  session_interface.py
src/app/database/: models.py
src/app/di/: container.py
src/app/infrastructure/: http_client.py
src/app/presentation/controllers/: auth_controller.py  hybrid_pacs_controller.py
src/app/presentation/styles/: pdf_style.css  style.qss  style_manager.py
src/app/presentation/views/: admin_view.py  base_view.py  enhanced_pacs_view.py  login_view.py  patients_view.py
src/app/repositories/: base_repository.py  pacs_url_repository.py  report_title_repository.py  settings_repository.py  user_repository.py
src/app/services/: auth_service.py  dicom_anonymizer_service.py  local_file_service.py  notification_service.py  pacs_service.py  pacs_url_service.py  report_title_service.py  session_service.py  settings_service.py
src/app/utils/: formatters.py  validators.py
src/docker/: docker-compose.yml
src/docker/orthanc/: orthanc.json
(+3 files in other folders)
