[project]
name = "app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "altgraph==0.17.4",
    "bcrypt==4.3.0",
    "brotli==1.1.0",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "cssselect2==0.8.0",
    "fonttools==4.58.1",
    "greenlet==3.2.2",
    "idna==3.10",
    "numpy==2.3.0",
    "packaging==25.0",
    "pefile==2023.2.7",
    "pillow==11.2.1",
    "pycparser==2.22",
    "pydicom==3.0.1",
    "pydyf==0.11.0",
    "pyinstaller==6.14.1",
    "pyinstaller-hooks-contrib==2025.5",
    "pymysql==1.1.1",
    "pyphen==0.17.2",
    "pyqt6==6.9.0",
    "pyqt6-qt6==6.9.0",
    "pyqt6_sip==13.10.2",
    "pywin32-ctypes==0.2.3",
    "requests==2.32.3",
    "setuptools==80.9.0",
    "sqlalchemy==2.0.41",
    "tinycss2==1.4.0",
    "tinyhtml5==2.0.0",
    "typing-extensions==4.13.2",
    "urllib3==2.4.0",
    "weasyprint==65.1",
    "webencodings==0.5.1",
    "zopfli==0.2.3.post1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
